--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -9,11 +9,6 @@ body {
     scroll-behavior: smooth;
 }
 
-img {
-    display: block;
-    max-width: 100%;
-}
-
 ul,
 li {
     list-style: none;
@@ -24,41 +19,89 @@ a {
     text-decoration: none;
 }
 
-header {
+.header-bg {
     background-color: black;
 }
 
-header .container {
+.header {
     display: flex;
     align-items: center;
     justify-content: space-between;
+    flex-wrap: wrap;
+    gap: 20px;
+    padding: 20px;
     max-width: 1200px;
     margin: 0 auto;
-    padding: 40px 20px;
 }
 
-nav ul {
+.header-menu {
     display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
     gap: 40px;
 }
 
-nav a {
+.header-menu a {
+    display: inline-block;
     color: #ffffff;
     font-size: 1.125rem;
-    padding: 20px 0;
+    padding: 16px 0;
+    position: relative;
 }
 
-nav a:after {
+.header-menu a:after {
     display: block;
     content: "";
-    height: 3px;
+    height: 2px;
     width: 0%;
     background-color: #ffffff;
     color: #ffffff;
+    margin-top: 4px;
     transition: 0.3s;
-    margin-top: 5px;
+    position: absolute;
 }
 
-nav a:hover::after {
+.header-menu a:hover::after {
     width: 100%;
+}
+
+@media screen and (max-width: 800px) {
+    .header {
+        justify-content: center;
+    }
+
+    .header-menu {
+        gap: 20px;
+    }
+
+    .header-menu a {
+        background-color: #111111;
+        padding: 12px 16px;
+        border-radius: 4px;
+        transition: 0.3s;
+    }
+
+    .header-menu a:hover {
+        background-color: #2e2e2e;
+    }
+
+    .header-menu a:after {
+        display: none;
+    }
+}
+
+@media screen and (max-width: 600px) {
+    .header {
+        justify-content: center;
+    }
+
+    .header-menu {
+        gap: 12px;
+    }
+
+    .header-menu a {
+        font-size: 0.875rem;
+        padding: 8px 12px;
+    }
 }
