Organizei a estrutura do projeto, adicionando componentes, dividindo o css, etc

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,13 @@
-@import url(/assets/css/cores.css);
-@import url(/assets/css/global.css);
-@import url(/assets/css/tipografia.css);
+/* GLOBAL */
+@import url(/assets/css/global/global.css);
+@import url(/assets/css/utilidades/tipografia.css);
+@import url(/assets/css/utilidades/cores.css);
+
+@import url(/assets/css/global/header.css);
+@import url(/assets/css/global/footer.css);
+
+/* HOME */
+@import url(/assets/css/home/introducao.css);
+
+/* UTILIDADES */
+@import url(/assets/css/utilidades/componentes.css);
