--- a/assets/css/global/header.css
+++ b/assets/css/global/header.css
@@ -8,9 +8,8 @@
     justify-content: space-between;
     flex-wrap: wrap;
     gap: 20px;
-    padding: 20px;
-    max-width: 1200px;
-    margin: 0 auto;
+    padding-top: 20px;
+    padding-bottom: 20px;
 }
 
 .header-menu {
