--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,11 +3,17 @@
 @import url(/assets/css/utilidades/tipografia.css);
 @import url(/assets/css/utilidades/cores.css);
 
-@import url(/assets/css/global/header.css);
-@import url(/assets/css/global/footer.css);
-
 /* HOME */
 @import url(/assets/css/home/introducao.css);
 
 /* UTILIDADES */
 @import url(/assets/css/utilidades/componentes.css);
+
+/* HEADER */
+@import url(/assets/css/global/header.css);
+
+/* VASSOURAS */
+@import url(/assets/css/vassouras/vassouras-lista.css);
+
+/* FOOTER */
+@import url(/assets/css/global/footer.css);
