Adicionei a seção magia

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,6 +5,7 @@
 
 /* HOME */
 @import url(/assets/css/home/introducao.css);
+@import url(/assets/css/home/magia.css);
 
 /* UTILIDADES */
 @import url(/assets/css/utilidades/componentes.css);
