--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,6 +6,7 @@
 /* HOME */
 @import url(/assets/css/home/introducao.css);
 @import url(/assets/css/home/magia.css);
+@import url(/assets/css/home/parceiros.css);
 
 /* UTILIDADES */
 @import url(/assets/css/utilidades/componentes.css);
