Adicionei a seção Depoimento

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,6 +7,7 @@
 @import url(/assets/css/home/introducao.css);
 @import url(/assets/css/home/magia.css);
 @import url(/assets/css/home/parceiros.css);
+@import url(/assets/css/home/depoimento.css);
 
 /* UTILIDADES */
 @import url(/assets/css/utilidades/componentes.css);
