--- a/assets/css/home/parceiros.css
+++ b/assets/css/home/parceiros.css
@@ -43,6 +43,10 @@
         grid-template-columns: repeat(2, 1fr);
     }
 
+    .parceiros li {
+        padding: 20px;
+    }
+
     .parceiros li:nth-child(odd) {
         border-left: none;
     }
