--- a/assets/css/utilidades/tipografia.css
+++ b/assets/css/utilidades/tipografia.css
@@ -1,8 +1,9 @@
-@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&family=Roboto:wght@400;500&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@1,900&family=Poppins:wght@400;600&family=Roboto:wght@400;500&display=swap");
 
 :root {
     --fonte-1: "Poppins", sans-serif;
     --fonte-2: "Roboto", sans-serif;
+    --fonte-3: "Merriweather", serif;
 }
 
 /* font-weight font-size/line-height font-family */
