Adicionei a seção de seguros

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,5 +18,8 @@
 /* VASSOURAS */
 @import url(/assets/css/vassouras/vassouras-lista.css);
 
+/* SEGUROS */
+@import url(/assets/css/seguros/seguros.css);
+
 /* FOOTER */
 @import url(/assets/css/global/footer.css);
