--- a/assets/css/utilidades/componentes.css
+++ b/assets/css/utilidades/componentes.css
@@ -17,10 +17,20 @@
     box-shadow: 0 2px 2px rgba(0, 0, 0, 0.1);
     opacity: 1;
     transition: 0.3s;
+    max-width: max-content;
 }
 
 .botao:hover {
     background: linear-gradient(#ffb60d, #e59317);
+}
+
+.botao.secundario {
+    background: var(--cor-10);
+    color: var(--cor-2);
+}
+
+.botao.secundario:hover {
+    background: var(--cor-9);
 }
 
 .link-ativo {
