Fiz ajustes finais na seção de seguros

--- a/assets/css/seguros/seguros.css
+++ b/assets/css/seguros/seguros.css
@@ -6,8 +6,9 @@
     display: grid;
     grid-template-columns: 1fr 1fr;
     gap: 40px;
-    place-items: center;
-    padding: 60px 0;
+    align-items: center;
+    padding-top: 60px;
+    padding-bottom: 60px;
 }
 
 .seguros h2 {
