--- a/assets/css/utilidades/componentes.css
+++ b/assets/css/utilidades/componentes.css
@@ -33,19 +33,19 @@
     background: var(--cor-9);
 }
 
+@media screen and (max-width: 600px) {
+    .botao {
+        padding: 12px 16px;
+        font-size: 1rem;
+    }
+}
+
 .link-ativo {
     color: var(--cor-p1);
 }
 
 .link-ativo:hover:after {
     background-color: var(--cor-p1);
-}
-
-@media screen and (max-width: 600px) {
-    .botao {
-        padding: 12px 16px;
-        font-size: 1rem;
-    }
 }
 
 .link {
@@ -65,4 +65,26 @@
 
 .link:hover {
     color: var(--cor-0);
+}
+
+/* TÍTULOS INTERNOS */
+.titulo-bg {
+    background-color: var(--cor-11);
+    padding: 60px 0;
+}
+
+.titulo p {
+    margin-bottom: 4px;
+}
+
+@media screen and (max-width: 800px) {
+    .titulo-bg {
+        padding: 40px 0;
+    }
+
+    .titulo p {
+        font-size: 1rem;
+        text-transform: lowercase;
+        font-weight: 400;
+    }
 }
