--- a/assets/css/utilidades/tipografia.css
+++ b/assets/css/utilidades/tipografia.css
@@ -9,7 +9,7 @@
 /* font-weight font-size/line-height font-family */
 
 .font-1-xs {
-    font: 400 0.75rem/1.33 var(--fonte-1);
+    font: 400 0.75rem/1.35 var(--fonte-1);
 }
 
 .font-2-xs {
@@ -21,12 +21,12 @@
 }
 
 .font-2-s {
-    font: 400 1.5rem/1.5 var(--fonte-2);
+    font: 400 1rem/1.5 var(--fonte-2);
 }
 
 .font-1-m,
 .font-1-m-b {
-    font: 400 1.125rem/1.33 var(--fonte-1);
+    font: 400 1.125rem/1.35 var(--fonte-1);
 }
 
 .font-1-m-b {
@@ -34,7 +34,7 @@
 }
 
 .font-2-m {
-    font: 500 1.125rem/1.33 var(--fonte-2);
+    font: 500 1.125rem/1.35 var(--fonte-2);
 }
 
 .font-1-l {
@@ -47,7 +47,7 @@
 }
 
 .font-2-l-b {
-    font-weight: 600;
+    font-weight: 500;
     letter-spacing: 0.015em;
     text-transform: uppercase;
 }
@@ -64,24 +64,22 @@
     font: 600 4rem/1.125 var(--fonte-1);
 }
 
-@media screen and (max-width: 1200px) {
+@media (max-width: 1200px) {
     .font-1-xxl {
         font-size: 3rem;
     }
-
     .font-2-l,
     .font-2-l-b {
         font-size: 1.125rem;
     }
 }
 
-@media screen and (max-width: 800px) {
+@media (max-width: 800px) {
+    .font-1-xxl {
+        font-size: 2rem;
+    }
     .font-1-xl,
     .font-2-xl {
         font-size: 1.5rem;
-    }
-
-    .font-1-xxl {
-        font-size: 2rem;
     }
 }
