Criei a página de vassouras

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,6 +17,7 @@
 
 /* VASSOURAS */
 @import url(/assets/css/vassouras/vassouras-lista.css);
+@import url(/assets/css/vassouras/vassouras.css);
 
 /* SEGUROS */
 @import url(/assets/css/seguros/seguros.css);
