--- a/assets/css/utilidades/componentes.css
+++ b/assets/css/utilidades/componentes.css
@@ -33,6 +33,25 @@
     background: var(--cor-9);
 }
 
+.botao.seta {
+    display: flex;
+    align-items: center;
+}
+
+.botao.seta::after {
+    display: inline-block;
+    content: "";
+    height: 10px;
+    width: 18px;
+    background: url(/assets//img//icones/seta.svg);
+    margin-left: 12px;
+    transition: transform 0.3s;
+}
+
+.botao.seta:hover::after {
+    transform: translateX(4px);
+}
+
 @media screen and (max-width: 600px) {
     .botao {
         padding: 12px 16px;
