Adicionei a página de seguros

--- a/assets/css/global/global.css
+++ b/assets/css/global/global.css
@@ -1,3 +1,13 @@
+:root {
+    --padding: 120px;
+}
+
+@media screen and (max-width: 800px) {
+    :root {
+        --padding: 60px;
+    }
+}
+
 * {
     margin: 0;
     padding: 0;
