Adicionei a página de vassoura

--- a/assets/css/utilidades/componentes.css
+++ b/assets/css/utilidades/componentes.css
@@ -106,4 +106,8 @@
         text-transform: lowercase;
         font-weight: 400;
     }
+
+    #vassoura .titulo p {
+        text-transform: initial;
+    }
 }
