--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,6 +19,9 @@
 @import url(/assets/css/vassouras/vassouras-lista.css);
 @import url(/assets/css/vassouras/vassouras.css);
 
+/* VASSOURA */
+@import url(/assets/css/vassoura/vassoura.css);
+
 /* SEGUROS */
 @import url(/assets/css/seguros/seguros.css);
 @import url(/assets/css/seguros/vantagens.css);
