--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,6 +11,7 @@
 
 /* UTILIDADES */
 @import url(/assets/css/utilidades/componentes.css);
+@import url(/assets/css/utilidades/formulario.css);
 
 /* HEADER */
 @import url(/assets/css/global/header.css);
@@ -21,6 +22,7 @@
 
 /* VASSOURA */
 @import url(/assets/css/vassoura/vassoura.css);
+@import url(/assets/css/vassoura/seguro.css);
 
 /* SEGUROS */
 @import url(/assets/css/seguros/seguros.css);
@@ -29,6 +31,10 @@
 
 /* FOOTER */
 @import url(/assets/css/global/footer.css);
+
+/* CONTATO */
+@import url(/assets/css/contato/contato.css);
+@import url(/assets/css/contato/lojas.css);
 
 /* TERMOS */
 @import url(/assets/css/termos/termos.css);
