--- a/assets/css/utilidades/componentes.css
+++ b/assets/css/utilidades/componentes.css
@@ -12,12 +12,14 @@
     color: var(--cor-p5);
     padding: 16px 32px;
     border-radius: 4px;
+    border: 0;
     font: 600 1.125rem/1.33 var(--fonte-1);
     text-transform: uppercase;
     box-shadow: 0 2px 2px rgba(0, 0, 0, 0.1);
     opacity: 1;
     transition: 0.3s;
     max-width: max-content;
+    cursor: pointer;
 }
 
 .botao:hover {
