--- a/assets/css/contato/lojas.css
+++ b/assets/css/contato/lojas.css
@@ -1,6 +1,7 @@
 .lojas {
     display: grid;
-    grid-template-columns: 1fr;
+    grid-template-columns: 1fr 1fr;
+    gap: 0 40px;
     padding-top: var(--padding);
     padding-bottom: var(--padding);
 }
@@ -18,8 +19,6 @@
     border-radius: 4px;
     background: var(--cor-0);
     box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
-    max-width: 656px;
-    margin: 0 auto;
 }
 
 .lojas-conteudo {
@@ -48,11 +47,21 @@
 }
 
 @media screen and (max-width: 800px) {
+    .lojas {
+        gap: 20px;
+        padding-top: 60px;
+        padding-bottom: 60px;
+    }
     .lojas h2 {
         margin-bottom: 32px;
     }
-
     .lojas-conteudo {
+        grid-template-columns: 1fr;
+    }
+}
+
+@media screen and (max-width: 600px) {
+    .lojas {
         grid-template-columns: 1fr;
     }
 }
