--- a/assets/css/home/introducao.css
+++ b/assets/css/home/introducao.css
@@ -1,6 +1,6 @@
 .introducao-bg {
-    background-color: var(--cor-12);
-    color: var(--cor-0);
+    background: var(--cor-12) url("/assets/img/dec/bottom-left.svg") no-repeat
+        bottom 160px left 20px;
     box-shadow: inset 0 -120px 0 var(--cor-0);
 }
 
