--- a/assets/css/utilidades/componentes.css
+++ b/assets/css/utilidades/componentes.css
@@ -94,6 +94,10 @@
     padding: 60px 0;
 }
 
+.titulo {
+    background: url("/assets/img/dec/top-right.svg") no-repeat top right 20px;
+}
+
 .titulo p {
     margin-bottom: 4px;
 }
@@ -101,6 +105,10 @@
 @media screen and (max-width: 800px) {
     .titulo-bg {
         padding: 40px 0;
+    }
+
+    .titulo {
+        background-image: none;
     }
 
     .titulo p {
