--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,6 +2,7 @@
 @import url(/assets/css/global/global.css);
 @import url(/assets/css/utilidades/tipografia.css);
 @import url(/assets/css/utilidades/cores.css);
+@import url(/assets/css/utilidades/animacao.css);
 
 /* HOME */
 @import url(/assets/css/home/introducao.css);
