--- a/assets/css/utilidades/componentes.css
+++ b/assets/css/utilidades/componentes.css
@@ -8,6 +8,7 @@
 /* BOTÃO */
 .botao {
     display: inline-block;
+    grid-column: 1/-1;
     background: linear-gradient(#ffbf00, #f2a60c);
     color: var(--cor-p5);
     padding: 16px 32px;
